# ProjectMarketplaceSemester2

./: .gitignore  CMakeLists.txt  README.md
examples/: demopybind.cpp  main.cpp
extra/: client.py  server.py
include/: Handelsplatz.cpp  Handelsplatz.hpp  HandelsplatzInterface.hpp  Nutzer.cpp  Nutzer.hpp  NutzerInterface.hpp  Objekt.cpp  Objekt.hpp  ObjektInterface.hpp
src/: Handelsplatz.cpp  HandelsplatzInterface.hpp  Nutzer.cpp  NutzerInterface.hpp  Objekt.cpp  ObjektInterface.hpp
tests/: tests.cpp
